Added configurable loot tables for gacha machines and capsules via nbt